rechange index.html

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 </head>
 <body>
     <div class="background">
-        <img  src="D:\FRONTEND\prototip\img\Ellipse 40.png"></img>
-        <img  class="i41" src="D:\FRONTEND\prototip\img\Ellipse 41.png" ></img>
-        <img  class="i42" src="D:\FRONTEND\prototip\img\Ellipse 42.png" ></img>
-        <img  class="i43" src="D:\FRONTEND\prototip\img\Ellipse 43.png" ></img>
-        <img  class="i44" src="D:\FRONTEND\prototip\img\Ellipse 44.png" ></img>
-        <img  class="i45" src="D:\FRONTEND\prototip\img\Ellipse 45.png" ></img>
-        <img  class="i46" src="D:\FRONTEND\prototip\img\Ellipse 46.png" ></img>
-        <img  class="logo" src="D:\FRONTEND\prototip\img\Figma logo.png" ></img>
+        <img  src="./img\Ellipse 40.png"></img>
+        <img  class="i41" src="./img\Ellipse 41.png" ></img>
+        <img  class="i42" src="./img\Ellipse 42.png" ></img>
+        <img  class="i43" src="./img\Ellipse 43.png" ></img>
+        <img  class="i44" src="./img\Ellipse 44.png" ></img>
+        <img  class="i45" src="./img\Ellipse 45.png" ></img>
+        <img  class="i46" src="./img\Ellipse 46.png" ></img>
+        <img  class="logo" src="./img\Figma logo.png" ></img>
         <h1>Free files</h1>
     </div>
     <header>
-        <img src="D:\FRONTEND\prototip\img\riot games.png">
-        <img src="D:\FRONTEND\prototip\img\Rectangle 128.png">
-        <img src="D:\FRONTEND\prototip\img\logo.png">
+        <img src="./img\riot games.png">
+        <img src="./img\Rectangle 128.png">
+        <img src="./img\logo.png">
         <nav>
             <a>GAME</a>
             <a>CHAMPIONS</a>
@@ -34,44 +34,44 @@
         </nav>
         
         <a class="userName">CYXARb</a>
-        <img class="lastImg" src="D:\FRONTEND\prototip\img\akali.png">
+        <img class="lastImg" src="./img\akali.png">
         <a class="userNameA">⯆</a>
     <div class="form">
         <div class="formImg"></div>
-        <img src="D:\FRONTEND\prototip\img\AGENTS.png"> 
+        <img src="./img\AGENTS.png"> 
         <!--<a>AGENTS</a>-->
     </div>
     <div class="agents">
         <div class="agent">
-            <img src="D:\FRONTEND\prototip\img\fenix.png">
+            <img src="./img\fenix.png">
             <p>United Kingdom</p>
-            <img class="name" src="D:\FRONTEND\prototip\img\fenix-name.png">
+            <img class="name" src="./img\fenix-name.png">
             <div class="skils">
-                <img src="D:\FRONTEND\prototip\img\Abilities-fenix.png">
+                <img src="./img\Abilities-fenix.png">
             </div>
         </div>
         <div class="agent">
-            <img src="D:\FRONTEND\prototip\img\jett.png">
+            <img src="./img\jett.png">
             <p>South Korea</p>
-            <img class="name" src="D:\FRONTEND\prototip\img\JETT-name.png">
+            <img class="name" src="./img\JETT-name.png">
             <div class="skils">
-                <img src="D:\FRONTEND\prototip\img\Abilities-jett.png">
+                <img src="./img\Abilities-jett.png">
             </div>
         </div>
         <div class="agent">
-            <img src="D:\FRONTEND\prototip\img\sova.png">
+            <img src="./img\sova.png">
             <p>Russia</p>
-            <img class="name" src="D:\FRONTEND\prototip\img\sova-name.png">
+            <img class="name" src="./img\sova-name.png">
             <div class="skils">
-                <img src="D:\FRONTEND\prototip\img\Abilities-sova.png">
+                <img src="./img\Abilities-sova.png">
             </div>
         </div>
         <div class="agent">
-            <img src="D:\FRONTEND\prototip\img\sage.png">
+            <img src="./img\sage.png">
             <p>China</p>
-            <img class="name" src="D:\FRONTEND\prototip\img\sage-name.png">
+            <img class="name" src="./img\sage-name.png">
             <div class="skils">
-                <img src="D:\FRONTEND\prototip\img\Abilities-sage.png">
+                <img src="./img\Abilities-sage.png">
             </div>
         </div>
     </div>
